# SENSE-The-Game-Customizer

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt  imgui_import.cmake  incbin_import.cmake  install_launcher.cmake  msvc_config.cmake  resources.rc.in  sdl2_import.cmake  steamSDK_import.cmake  tinyfiledialogs_import.cmake
app/src/main/cpp/: main.cpp
app/src/main/cpp/application/: game.cpp  module.cmake  renderer.cpp  window.cpp
app/src/main/cpp/application/application/: game.hpp  renderer.hpp  window.hpp
app/src/main/cpp/assets/: .gitignore  assets.cpp  autogen.cmake  data.cpp  incbin_tool.cmake  module.cmake
app/src/main/cpp/assets/assets/: assets.hpp  data.hpp
app/src/main/cpp/assets/templates/: assets.cpp.template  assets.hpp.template
app/src/main/cpp/objects/: imgui_window.cpp  missing_game_window.cpp  module.cmake  text.cpp
app/src/main/cpp/objects/objects/: imgui_window.hpp  missing_game_window.hpp  text.hpp
app/src/main/cpp/utils/: file_manager.cpp  find_game.cpp  icon.cpp  input_system.cpp  module.cmake  texture.cpp
app/src/main/cpp/utils/utils/: file_manager.hpp  find_game.hpp  icon.hpp  input_system.hpp  texture.hpp
app/src/main/java/com/ipoleksenko/sense/: MainActivity.java
app/src/main/java/com/ipoleksenko/sense/customizer/: FileManager.java  MainActivity.java
app/src/main/res/values/: strings.xml
